code/beesagono_be: update service, repository and controller test