@@ -2,6 +2,8 @@ package com.beesagono.backend.service;
 
 import com.beesagono.backend.entity.DailyPuzzle;
 import com.beesagono.backend.entity.DictionaryWord;
+import com.beesagono.backend.entity.PuzzleOuterLetter;
+import com.beesagono.backend.entity.id.PuzzleOuterLetterId;
 import com.beesagono.backend.repository.DailyPuzzleRepository;
 import com.beesagono.backend.repository.DictionaryWordRepository;
 import com.beesagono.backend.repository.PuzzleOuterLetterRepository;
@@ -12,13 +14,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.never;
@@ -45,53 +48,66 @@ class PuzzleGeneratorServiceImplTest {
     private PuzzleGeneratorServiceImpl puzzleGeneratorService;
 
     @Test
-    @DisplayName("generateAndSavePuzzleForDate - Idempotency check: does nothing when puzzle already exists")
-    void shouldDoNothingWhenPuzzleAlreadyExists() {
+    @DisplayName("generateAndSavePuzzleForDate - Returns existing puzzle when already present")
+    void shouldReturnExistingPuzzleWhenAlreadyExists() {
         LocalDate date = LocalDate.of(2026, 9, 8);
+        DailyPuzzle existingPuzzle = createDailyPuzzle("puzzle-existing", date, "A", 100);
 
         when(dailyPuzzleRepository.existsByPuzzleDate(date)).thenReturn(true);
+        when(dailyPuzzleRepository.findByPuzzleDate(date)).thenReturn(Optional.of(existingPuzzle));
 
-        puzzleGeneratorService.generateAndSavePuzzleForDate(date);
+        DailyPuzzle result = puzzleGeneratorService.generateAndSavePuzzleForDate(date);
 
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo("puzzle-existing");
         verify(dailyPuzzleRepository, never()).save(any());
         verify(puzzleOuterLetterRepository, never()).saveAll(any());
         verify(puzzleWordRepository, never()).saveAll(any());
     }
 
     @Test
-    @DisplayName("generateAndSavePuzzleForDate - Generates and saves puzzle successfully when Quality Gate is passed")
+    @DisplayName("generateAndSavePuzzleForDate - Generates and saves puzzle successfully using fallback candidates")
+    void shouldGenerateAndSavePuzzleSuccessfullyWhenNoCandidatesFound() {
+        LocalDate date = LocalDate.of(2026, 9, 8);
+        DictionaryWord pangramWord = createDictionaryWord("ALBERGO", 7);
+        DailyPuzzle savedPuzzle = createDailyPuzzle("puzzle-1", date, "A", 100);
+
+        when(dailyPuzzleRepository.existsByPuzzleDate(date)).thenReturn(false);
+        when(dailyPuzzleRepository.findAllByOrderByPuzzleDateDesc()).thenReturn(Collections.emptyList());
+        when(dictionaryWordRepository.findCandidatePangrams()).thenReturn(Collections.emptyList());
+        when(dictionaryWordRepository.findValidWordsForPuzzle(anyInt(), anyInt()))
+                .thenReturn(List.of(pangramWord));
+        when(dailyPuzzleRepository.save(any(DailyPuzzle.class))).thenReturn(savedPuzzle);
+
+        DailyPuzzle result = puzzleGeneratorService.generateAndSavePuzzleForDate(date);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo("puzzle-1");
+
+        verify(dailyPuzzleRepository, times(1)).save(any(DailyPuzzle.class));
+        verify(puzzleOuterLetterRepository, times(1)).saveAll(any());
+        verify(puzzleWordRepository, times(1)).saveAll(any());
+    }
+
+    @Test
+    @DisplayName("generateAndSavePuzzleForDate - Generates and saves puzzle successfully with candidates")
     void shouldGenerateAndSavePuzzleSuccessfully() {
         LocalDate date = LocalDate.of(2026, 9, 8);
-
-        List<DictionaryWord> validWords = new ArrayList<>();
-        validWords.add(DictionaryWord.builder()
-                .word("ALBERGO")
-                .uniqueLettersCount(7)
-                .build()); // Mielegramma
-
-        for (int i = 0; i < 20; i++) {
-            validWords.add(DictionaryWord.builder()
-                    .word("ALBA" + i)
-                    .uniqueLettersCount(4)
-                    .build());
-        }
-
-        DailyPuzzle savedPuzzle = DailyPuzzle.builder()
-                .id("puzzle-1")
-                .puzzleDate(date)
-                .centerLetter("A")
-                .maxScore(100)
-                .build();
+        DictionaryWord shortWord = createDictionaryWord("AERA", 3);
+        DictionaryWord pangramWord = createDictionaryWord("ALBERGO", 7);
+        DailyPuzzle savedPuzzle = createDailyPuzzle("puzzle-1", date, "A", 15);
 
         when(dailyPuzzleRepository.existsByPuzzleDate(date)).thenReturn(false);
-        when(dailyPuzzleRepository.findAllByOrderByPuzzleDateDesc(any(Pageable.class)))
-                .thenReturn(List.of());
+        when(dailyPuzzleRepository.findAllByOrderByPuzzleDateDesc()).thenReturn(Collections.emptyList());
         when(dictionaryWordRepository.findCandidatePangrams()).thenReturn(List.of("ALBERGO"));
         when(dictionaryWordRepository.findValidWordsForPuzzle(anyInt(), anyInt()))
-                .thenReturn(validWords);
+                .thenReturn(List.of(shortWord, pangramWord));
         when(dailyPuzzleRepository.save(any(DailyPuzzle.class))).thenReturn(savedPuzzle);
 
-        puzzleGeneratorService.generateAndSavePuzzleForDate(date);
+        DailyPuzzle result = puzzleGeneratorService.generateAndSavePuzzleForDate(date);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo("puzzle-1");
 
         verify(dailyPuzzleRepository, times(1)).save(any(DailyPuzzle.class));
         verify(puzzleOuterLetterRepository, times(1)).saveAll(any());
@@ -99,126 +115,63 @@ class PuzzleGeneratorServiceImplTest {
     }
 
     @Test
-    @DisplayName("generateAndSavePuzzleForDate - Fallback mode: uses best available board when Quality Gate fails after max attempts")
-    void shouldFallbackToBestBoardWhenQualityGateFails() {
-        LocalDate date = LocalDate.of(2026, 9, 8);
+    @DisplayName("recalculatePuzzleWords - Does nothing if puzzle or centerLetter is null")
+    void shouldDoNothingWhenRecalculatingWithNullPuzzleOrCenterLetter() {
+        puzzleGeneratorService.recalculatePuzzleWords(null);
 
-        // We generate a single word per attempt, so the Quality Gate is never
-        // passed (requires >= 20 words)
-        List<DictionaryWord> validWords = List.of(
-                DictionaryWord.builder()
-                        .word("ALBERGO")
-                        .uniqueLettersCount(7)
-                        .build());
+        DailyPuzzle invalidPuzzle = createDailyPuzzle("puzzle-invalid", LocalDate.now(), null, 0);
+        puzzleGeneratorService.recalculatePuzzleWords(invalidPuzzle);
 
-        DailyPuzzle savedPuzzle = DailyPuzzle.builder()
-                .id("puzzle-fallback-1")
-                .puzzleDate(date)
-                .centerLetter("A")
-                .maxScore(14)
-                .build();
+        verify(dictionaryWordRepository, never()).findValidWordsForPuzzle(anyInt(), anyInt());
+        verify(puzzleWordRepository, never()).saveAll(any());
+    }
 
-        when(dailyPuzzleRepository.existsByPuzzleDate(date)).thenReturn(false);
-        when(dailyPuzzleRepository.findAllByOrderByPuzzleDateDesc(any(Pageable.class)))
-                .thenReturn(List.of());
-        when(dictionaryWordRepository.findCandidatePangrams()).thenReturn(List.of("ALBERGO"));
+    @Test
+    @DisplayName("recalculatePuzzleWords - Clears existing words and recalculates max score")
+    void shouldRecalculatePuzzleWordsSuccessfully() {
+        String puzzleId = "puzzle-1";
+        DailyPuzzle puzzle = createDailyPuzzle(puzzleId, LocalDate.now(), "A", 0);
+
+        PuzzleOuterLetter outerLetterB = createPuzzleOuterLetter(puzzleId, "B");
+        PuzzleOuterLetter outerLetterR = createPuzzleOuterLetter(puzzleId, "R");
+        puzzle.getOuterLetters().addAll(List.of(outerLetterB, outerLetterR));
+
+        DictionaryWord dictWord1 = createDictionaryWord("ARABA", 3); // 5 letters -> 5 points
+        DictionaryWord dictWord2 = createDictionaryWord("RABA", 3);  // 4 letters -> 1 point
+
         when(dictionaryWordRepository.findValidWordsForPuzzle(anyInt(), anyInt()))
-                .thenReturn(validWords);
-        when(dailyPuzzleRepository.save(any(DailyPuzzle.class))).thenReturn(savedPuzzle);
+                .thenReturn(List.of(dictWord1, dictWord2));
 
-        puzzleGeneratorService.generateAndSavePuzzleForDate(date);
+        puzzleGeneratorService.recalculatePuzzleWords(puzzle);
 
-        // Ensure that the best board is saved anyway after 50 unsuccessful attempts
-        // (fallback)
-        verify(dailyPuzzleRepository, times(1)).save(any(DailyPuzzle.class));
-        verify(puzzleOuterLetterRepository, times(1)).saveAll(any());
+        assertThat(puzzle.getMaxScore()).isEqualTo(6);
         verify(puzzleWordRepository, times(1)).saveAll(any());
     }
 
-    @Test
-    @DisplayName("generateAndSavePuzzleForDate - Propagates exception when dailyPuzzleRepository.save fails")
-    void shouldPropagateExceptionWhenPuzzleSaveFails() {
-        LocalDate date = LocalDate.of(2026, 9, 8);
+    // --- Private Helper Methods ---
 
-        List<DictionaryWord> validWords = List.of(
-                DictionaryWord.builder().word("ALBERGO").uniqueLettersCount(7).build());
-
-        when(dailyPuzzleRepository.existsByPuzzleDate(date)).thenReturn(false);
-        when(dailyPuzzleRepository.findAllByOrderByPuzzleDateDesc(any(Pageable.class))).thenReturn(List.of());
-        when(dictionaryWordRepository.findCandidatePangrams()).thenReturn(List.of("ALBERGO"));
-        when(dictionaryWordRepository.findValidWordsForPuzzle(anyInt(), anyInt())).thenReturn(validWords);
-
-        when(dailyPuzzleRepository.save(any(DailyPuzzle.class)))
-                .thenThrow(new RuntimeException("Database error during puzzle save"));
-
-        assertThatThrownBy(() -> puzzleGeneratorService.generateAndSavePuzzleForDate(date))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Database error during puzzle save");
-
-        verify(puzzleOuterLetterRepository, never()).saveAll(any());
-        verify(puzzleWordRepository, never()).saveAll(any());
+    private DailyPuzzle createDailyPuzzle(String id, LocalDate date, String centerLetter, int maxScore) {
+        return DailyPuzzle.builder()
+                .id(id)
+                .puzzleDate(date)
+                .centerLetter(centerLetter)
+                .maxScore(maxScore)
+                .outerLetters(new ArrayList<>())
+                .puzzleWords(new ArrayList<>())
+                .build();
     }
 
-    @Test
-    @DisplayName("generateAndSavePuzzleForDate - Propagates exception when outer letters save fails")
-    void shouldPropagateExceptionWhenOuterLettersSaveFails() {
-        LocalDate date = LocalDate.of(2026, 9, 8);
-
-        List<DictionaryWord> validWords = List.of(
-                DictionaryWord.builder().word("ALBERGO").uniqueLettersCount(7).build());
-
-        DailyPuzzle savedPuzzle = DailyPuzzle.builder()
-                .id("puzzle-1")
-                .puzzleDate(date)
-                .centerLetter("A")
-                .maxScore(100)
+    private DictionaryWord createDictionaryWord(String word, int uniqueLetters) {
+        return DictionaryWord.builder()
+                .word(word)
+                .wordLength(word.length())
+                .uniqueLettersCount(uniqueLetters)
                 .build();
-
-        when(dailyPuzzleRepository.existsByPuzzleDate(date)).thenReturn(false);
-        when(dailyPuzzleRepository.findAllByOrderByPuzzleDateDesc(any(Pageable.class))).thenReturn(List.of());
-        when(dictionaryWordRepository.findCandidatePangrams()).thenReturn(List.of("ALBERGO"));
-        when(dictionaryWordRepository.findValidWordsForPuzzle(anyInt(), anyInt())).thenReturn(validWords);
-        when(dailyPuzzleRepository.save(any(DailyPuzzle.class))).thenReturn(savedPuzzle);
-
-        when(puzzleOuterLetterRepository.saveAll(any()))
-                .thenThrow(new RuntimeException("Database error during outer letters save"));
-
-        assertThatThrownBy(() -> puzzleGeneratorService.generateAndSavePuzzleForDate(date))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Database error during outer letters save");
-
-        verify(puzzleWordRepository, never()).saveAll(any());
     }
 
-    @Test
-    @DisplayName("generateAndSavePuzzleForDate - Propagates exception when puzzle words save fails")
-    void shouldPropagateExceptionWhenPuzzleWordsSaveFails() {
-        LocalDate date = LocalDate.of(2026, 9, 8);
-
-        List<DictionaryWord> validWords = List.of(
-                DictionaryWord.builder().word("ALBERGO").uniqueLettersCount(7).build());
-
-        DailyPuzzle savedPuzzle = DailyPuzzle.builder()
-                .id("puzzle-1")
-                .puzzleDate(date)
-                .centerLetter("A")
-                .maxScore(100)
+    private PuzzleOuterLetter createPuzzleOuterLetter(String puzzleId, String letter) {
+        return PuzzleOuterLetter.builder()
+                .id(new PuzzleOuterLetterId(puzzleId, letter))
                 .build();
-
-        when(dailyPuzzleRepository.existsByPuzzleDate(date)).thenReturn(false);
-        when(dailyPuzzleRepository.findAllByOrderByPuzzleDateDesc(any(Pageable.class))).thenReturn(List.of());
-        when(dictionaryWordRepository.findCandidatePangrams()).thenReturn(List.of("ALBERGO"));
-        when(dictionaryWordRepository.findValidWordsForPuzzle(anyInt(), anyInt())).thenReturn(validWords);
-        when(dailyPuzzleRepository.save(any(DailyPuzzle.class))).thenReturn(savedPuzzle);
-
-        when(puzzleWordRepository.saveAll(any()))
-                .thenThrow(new RuntimeException("Database error during puzzle words save"));
-
-        assertThatThrownBy(() -> puzzleGeneratorService.generateAndSavePuzzleForDate(date))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Database error during puzzle words save");
-
-        verify(dailyPuzzleRepository, times(1)).save(any(DailyPuzzle.class));
-        verify(puzzleOuterLetterRepository, times(1)).saveAll(any());
     }
 }
